--- a/d06/실습/실습8.html
+++ b/d06/실습/실습8.html
@@ -26,16 +26,24 @@
                 <img src="img/main.jpg" id="main-img" />
             </div>
             <div id="content-top"> <!-- 본문 상단 -->
-                <div class="content-inner">
-                    <img src="img/icon1.png" />
+                <div class="content-inner"> <!-- !! 이미지와 텍스트를 따로 li로 작성 !! -->
                     <ul>
-                        <h4>예약안내</h4>
-                        <li>스튜디오 대여는 사전에 인터넷 예약을 하셔야 합니다. 예약은 1일 이전까지 가능합니다.</li>
+                        <li>
+                            <img src="img/icon1.png" />
+                        </li>
+                        <li>
+                            <h4>예약안내</h4>
+                            <p>스튜디오 대여는 사전에 인터넷 예약을 하셔야 합니다. 예약은 1일 이전까지 가능합니다.</p>
+                        </li>
                     </ul>
-                    <img src="img/icon2.png" />
                     <ul>
-                        <h4>포토갤러리</h4>
-                        <li>취업 사진, 가족 사진, 프로필 사진, 우정 사진 등 개인 또는 단체가 이용 할 수 있습니다.</li>
+                        <li>
+                            <img src="img/icon2.png" />
+                        </li>
+                        <li>
+                            <h4>포토갤러리</h4>
+                            <p>취업 사진, 가족 사진, 프로필 사진, 우정 사진 등 개인 또는 단체가 이용 할 수 있습니다.</p>
+                        </li>
                     </ul>
                 </div>
             </div>
