--- a/d07/실습/실습10.html
+++ b/d07/실습/실습10.html
@@ -7,15 +7,15 @@
     <link href="img/icon_instagram.jfif" rel="shortcut icon" type="image/x-icon" />
 </head>
 <body>
-    <div id="wrap">
-        <div id="header">
+    <div id="wrap"> <!-- Base -->
+        <div id="header"> <!-- Header -->
             
         </div>
-        <div id="contents">
-            <div id="left-box">
+        <div id="contents"> <!-- Contents -->
+            <div id="left-box"> <!-- left-box (Image) -->
                 <img src="img/instagram.png" />
             </div>
-            <div id="right-box">
+            <div id="right-box"> <!-- right-box (Login box) -->
                 <div id="logo"> </div>
                 <div><input class="input" type="text" placeholder="전화번호, 사용자 이름 또는 이메일" /></div>
                 <div><input class="input" type="password" placeholder="비밀번호" /></div>
@@ -29,7 +29,7 @@
                 <div id="emp3">계정이 없으신가요? <a href="https://www.instagram.com/accounts/emailsignup/" class="register">가입하기</a></div>
             </div>
         </div>
-        <div id="footer">
+        <div id="footer"> <!-- Footer -->
             <ul id="footer-top">
                 <li><a href="https://about.meta.com/">Meta</a></li>
                 <li><a href="https://about.instagram.com/">소개</a></li>
