--- a/d09/실습/실습1.html
+++ b/d09/실습/실습1.html
@@ -10,6 +10,11 @@
         console.log("문자열 자료: 제품명 (아메리카노(ICED)), 옵션 (샷추가), 메뉴 (결제하기)");
         console.log("불리언 자료: 확인 (다음, 취소), 쿠폰 (쿠폰 사용 여부), 영수증 출력 (예, 아니오)");
         console.log("배열 자료: 제품 메뉴 (아메리카노, 1,500, ...), 옵션 (샷추가, 헤이즐럿시럽, 연하게, ...), 결제방식 (카드, 카카오페이, 네이버페이, ...)");
+
+        // 숫자: 대기번호, 화면전환번호, 주문수량 등
+        // 문자열: 카테고리명, 지점명, 쿠폰번호 등
+        // 불리언: 영수증발급여부, 얼음선택, 쿠폰사용여부 등
+        // 배열: 유료옵션, 카테고리내음료들, 카테고리종류 등
     </script>
 </body>
 </html>
