--- a/project/2_daangn/sidebar.html
+++ b/project/2_daangn/sidebar.html
@@ -13,7 +13,7 @@
             <div id="sidebar"> <!-- 본문 사이드바 -->
                 <div class="filter"> <!-- 사이드바: 필터 탭 -->
                     <h3>필터</h3>
-                    <a href="./중고거래.html" class="reset_filter">초기화</a>
+                    <a href="./sidebar.html" class="reset_filter">초기화</a>
                 </div>
                 <div class="checkbox"><input class="checkbox_filter" type="checkbox" /> <span>거래 가능만 보기</span> </div>
                 <div class="location"> <!-- 사이드바: 위치 탭 -->
@@ -25,7 +25,7 @@
                     <div><input class="radio" type="radio" name="location" /> <span>중1동</span> </div>
                     <div><input class="radio" type="radio" name="location" /> <span>상3동</span> </div>
                     <div><input class="radio" type="radio" name="location" /> <span>도당동</span> </div>
-                    <div><a href="./중고거래.html" class="more">더보기</a></div>
+                    <div><a href="./sidebar.html" class="more">더보기</a></div>
                 </div>
                 <div class="category"> <!-- 사이드바: 카테고리 탭 -->
                     <h4 class="title">카테고리</h4>
@@ -61,7 +61,7 @@
                         -
                         <input class="input_price" type="number" placeholder="0" />
                     </div>
-                    <a href="./중고거래.html" class="submit">적용하기</a>
+                    <a href="./sidebar.html" class="submit">적용하기</a>
                 </div>
             </div>
         </div>
