--- a/project/2_daangn/buy-sell.html
+++ b/project/2_daangn/buy-sell.html
@@ -10,8 +10,11 @@
     <div id="wrap">
         <div id="header"></div> <!-- HEADER HERE -->
 
+        <div id="title">
+            <h5 id="main_menu">홈 > <span>중고거래</span></h5>
+            <h2 id="main_title">경기도 부천시 중동 중고거래</h2>
+        </div>
         <div id="main"> <!-- 본문 -->
-
             <div id="sidebar"> <!-- 본문 사이드바 --> <!-- 참고용 ============== -->
                 <div class="filter"> <!-- 사이드바: 필터 탭 -->
                     <h3>필터</h3>
@@ -276,6 +279,11 @@
 
             </div> <!--본문 끝 ================= -->
         </div>
+
+        <div>
+            <img src="img/app_download.png" /> <!-- TODO -->
+        </div>
+
         <div id="footer"></div> <!-- FOOTER HERE -->
     </div>
 </body>
