--- a/project/2_daangn/buy_sell.html
+++ b/project/2_daangn/buy_sell.html
@@ -4,7 +4,7 @@
     <meta charset='utf-8'>
     <title>경기도 부천시 중동 중고거래 | 당근</title>
     <link rel='icon' href='//warp-static.daangn.com/hec22jupig83mkc2f25bqpjq/favicon-ptbCteuu.png' type='image/png'>
-    <link rel='stylesheet' type='text/css' media='screen' href='./buy-sell.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='./buy_sell.css'>
     <link rel='stylesheet' type='text/css' media='screen' href='./sidebar.css'>
 </head>
 <body>
@@ -19,7 +19,7 @@
             <div id="sidebar"> <!-- 본문 사이드바 --> <!-- 참고용 ============== -->
                 <div class="filter"> <!-- 사이드바: 필터 탭 -->
                     <h3>필터</h3>
-                    <a href="./buy-sell.html" class="reset_filter">초기화</a>
+                    <a href="./buy_sell.html" class="reset_filter">초기화</a>
                 </div>
                 <div class="checkbox"><input class="checkbox_filter" type="checkbox" /> <span>거래 가능만 보기</span> </div>
                 <div class="location"> <!-- 사이드바: 위치 탭 -->
@@ -31,7 +31,7 @@
                     <div><input class="radio" type="radio" name="location" /> <span>중1동</span> </div>
                     <div><input class="radio" type="radio" name="location" /> <span>상3동</span> </div>
                     <div><input class="radio" type="radio" name="location" /> <span>도당동</span> </div>
-                    <div><a href="./buy-sell.html" class="more">더보기</a></div>
+                    <div><a href="./buy_sell.html" class="more">더보기</a></div>
                 </div>
                 <div class="category"> <!-- 사이드바: 카테고리 탭 -->
                     <h4 class="sidebar_title">카테고리</h4>
@@ -67,7 +67,7 @@
                         -
                         <input class="input_price" type="number" placeholder="0" />
                     </div>
-                    <a href="./buy-sell.html" class="submit">적용하기</a>
+                    <a href="./buy_sell.html" class="submit">적용하기</a>
                 </div>
             </div> <!-- 참고용 sidebar ================= -->
 
