--- a/project/2_daangn/buy_sell.html
+++ b/project/2_daangn/buy_sell.html
@@ -281,7 +281,7 @@
             </div> <!--본문 끝 ================= -->
         </div>
 
-        <div>
+        <div id="bottom_image">
             <img src="img/app_download.png" /> <!-- TODO -->
         </div>
 
