--- a/project/2_daangn/buy_sell.html
+++ b/project/2_daangn/buy_sell.html
@@ -282,21 +282,21 @@
             </div> <!--본문 끝 ================= -->
         </div>
 
-        <div id="bottom_image">
-            <div id="bottom_wrap">
+        <div id="bottom_banner"> <!-- 하단 배너 (본문과 푸터 사이) -->
+            <div id="banner_wrap">
                 <div>
-                    <div class="bottom_image_top">당근에서 가까운 이웃과 함께해요.</div>
-                    <div class="bottom_image_bottom">지금 바로 다운로드하기</div>
+                    <div class="banner_top">당근에서 가까운 이웃과 함께해요.</div>
+                    <div class="banner_bottom">지금 바로 다운로드하기</div>
                     <div>
-                        <a href="#"><img class="bottom_image" src="https://karrotmarket-com-sanity-cdn.krrt.io/production/49380c1c7e70e49f0f93baf0f790925eefc69082-120x40.svg" /></a>
-                        <a href="#"><img class="bottom_image" src="https://karrotmarket-com-sanity-cdn.krrt.io/production/0d8f72b8e4cdb98af115a7c1f04c4abf19f5c419-180x53.svg" /></a>
+                        <a href="#"><img class="banner_icon" src="https://karrotmarket-com-sanity-cdn.krrt.io/production/49380c1c7e70e49f0f93baf0f790925eefc69082-120x40.svg" /></a>
+                        <a href="#"><img class="banner_icon" src="https://karrotmarket-com-sanity-cdn.krrt.io/production/0d8f72b8e4cdb98af115a7c1f04c4abf19f5c419-180x53.svg" /></a>
                     </div>
                 </div>
                 <div>
-                    <img class="bottom_right_image" src="img/app_download.png" />
+                    <img class="banner_image" src="img/app_download.png" />
                 </div>
             </div>
-        </div>
+        </div> <!-- 하단 배너 끝 -->
 
         <!-- 03.[공통] #footer -->
         <footer id="footer">
