--- a/project/2_daangn/jobs.html
+++ b/project/2_daangn/jobs.html
@@ -12,25 +12,30 @@
             <img class="logo" src="daangn_logo.png" /> 
             <ul class="main_menu">  
                 <li><a href="#">중고거래</a></li>
-                <li><a href="#">부동산Ⅴ</a></li>
+                <li><a href="#">부동산 ▼ </a></li>
                 <li><a href="#">중고차</a></li>
-                <li><a href="#">알바Ⅴ</a></li>
+                <li><a href="#">알바 ▼ </a></li>
                 <li><a href="#">동네업체</a></li>
                 <li><a href="#">동네생활</a></li>
                 <li><a href="#">모임</a></li>
             </ul>
-            <button class="app_download"><a href="#">앱 다운로드</a></button>
+            <div class="app_download">앱 다운로드</div>
         </div>
     </div>
     <div class="search_header">
-        <div class="search_bar">
-            <div class="category_select">
-                <p>알바 Ⅴ</p>
-            </div>
-            <input class="search_input" type="text" placeholder="검색어를 입력해주세요">
-            <button class="search_botton">➡</button>
-        </div>
+        <div class="search_area">
+            <button class="location_btn">
+                <p> 부평동 ▼</p>
+            </button>
 
+            <div class="search_bar">
+                <p> 중고거래 ▼ |</p>
+
+                <input type="text" placeholder=" 검색어를 입력해주세요" class="search_input">
+
+                <button class="search_botton">→</button>
+            </div>
+        </div>
         <div class="keyword_bar">
             <ul class="keywords">
                     <li> <span class="populer">인기검색어</span> </li>
