--- a/project/2_daangn/buy_sell.html
+++ b/project/2_daangn/buy_sell.html
@@ -6,14 +6,82 @@
     <link rel='icon' href='//warp-static.daangn.com/hec22jupig83mkc2f25bqpjq/favicon-ptbCteuu.png' type='image/png'>
     <link rel='stylesheet' type='text/css' media='screen' href='./buy_sell.css'>
     <link rel='stylesheet' type='text/css' media='screen' href='./sidebar.css'>
-    <link rel='stylesheet' type='text/css' media='screen' href='footer.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='./footer.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='./header.css'>
 </head>
 <body>
     <div id="wrap">
-        <div id="header"></div> <!-- HEADER HERE -->
+        <div id="main_header"> <!--헤더-->
+        <div class="menu_top">
+            <a href="./main.html"><img class="logo" src="daangn_logo.png"></a>
+            <ul class="main_menu">  
+                <li><a href="./buy_sell.html">중고거래</a></li>
+                <li>
+                    <a href="#">부동산 ▼</a>
+                    <ul class="sub_menu">
+                        <li><a href="#">부동산 검색</a></li>
+                        <li><a href="#">중개사 서비스</a></li>
+                    </ul>  
+                </li>
+                <li><a href="#">중고차</a></li>
+                <li>
+                    <a href="#">알바 ▼</a>
+                    <ul class="sub_menu">
+                        <li><a href="./jobs.html">알바 검색</a></li>
+                        <li><a href="#">당근알바 소개</a></li>
+                        <li><a href="#">기업형 서비스</a></li>
+                        <li><a href="#">신뢰와 안전</a></li>
+                    </ul> 
+                </li>
+                <li><a href="#">동네업체</a></li>
+                <li><a href="#">동네생활</a></li>
+                <li><a href="#">모임</a></li>
+            </ul>
+            <button class="app_download">앱 다운로드</button>
+        </div>
+    </div>
+    <div class="search_header">
+        <div class="search_area">
+            <button class="location_btn">
+                <p> 부평동 ▼</p>
+            </button>
+
+            <div class="search_bar">
+                <p> 중고거래 ▼ |</p>
+
+                <input type="text" placeholder=" 검색어를 입력해주세요" class="search_input">
+
+                <button class="search_botton">➡</button>
+            </div>
+        </div>
+        <div class="keyword_bar">
+            <ul class="keywords">
+                    <li> <span class="populer">인기검색어</span> </li>
+                    <li> <a href="#"> 소일거리 </a></li>
+                    <li> <a href="#"> 짐옮기기 </a></li>
+                    <li> <a href="#"> 이사짐 </a></li>
+                    <li> <a href="#"> 배달 </a></li>
+                    <li> <a href="#"> 등하원 </a></li>
+                    <li> <a href="#"> 도우미 </a></li> 
+                    <li> <a href="#"> 소일거리 </a></li>
+                    <li> <a href="#"> 짐옮기기 </a></li>
+                    <li> <a href="#"> 이사짐 </a></li>
+                    <li> <a href="#"> 배달 </a></li>
+                    <li> <a href="#"> 등하원 </a></li>
+                    <li> <a href="#"> 도우미 </a></li> 
+                    <li> <a href="#"> 소일거리 </a></li>
+                    <li> <a href="#"> 짐옮기기 </a></li>
+                    <li> <a href="#"> 이사짐 </a></li>
+                    <li> <a href="#"> 배달 </a></li>
+                    <li> <a href="#"> 등하원 </a></li>
+                    <li> <a href="#"> 도우미 </a></li> 
+
+            </ul>
+        </div>
+    </div>
 
         <div id="title">
-            <h5 class="main_menu">홈 > <span>중고거래</span></h5>
+            <h5 class="main_menu">홈 >&nbsp;<span>중고거래</span></h5>
             <h2 class="main_title">경기도 부천시 중동 중고거래</h2>
         </div>
         <div id="main"> <!-- 본문 -->
