--- a/project/2_daangn/buy_sell.html
+++ b/project/2_daangn/buy_sell.html
@@ -13,11 +13,11 @@
     <div id="wrap">
         <div id="main_header"> <!--헤더-->
         <div class="menu_top">
-            <a href="./main.html"><img class="logo" src="daangn_logo.png"></a>
+            <a href="main.html"><img class="logo" src="daangn_logo.png"></a>
             <ul class="main_menu">  
                 <li><a href="./buy_sell.html">중고거래</a></li>
                 <li>
-                    <a href="#">부동산 ▼</a>
+                    <a href="#">부동산</a>
                     <ul class="sub_menu">
                         <li><a href="#">부동산 검색</a></li>
                         <li><a href="#">중개사 서비스</a></li>
@@ -25,9 +25,9 @@
                 </li>
                 <li><a href="#">중고차</a></li>
                 <li>
-                    <a href="#">알바 ▼</a>
+                    <a href="./jobs.html">알바</a>
                     <ul class="sub_menu">
-                        <li><a href="./jobs.html">알바 검색</a></li>
+                        <li><a href="#">알바 검색</a></li>
                         <li><a href="#">당근알바 소개</a></li>
                         <li><a href="#">기업형 서비스</a></li>
                         <li><a href="#">신뢰와 안전</a></li>
@@ -43,7 +43,8 @@
     <div class="search_header">
         <div class="search_area">
             <button class="location_btn">
-                <p> 부평동 ▼</p>
+                <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" data-seed-icon="true" data-seed-icon-version="0.0.21" width="16px" height="16px"><g><path d="M12.0022 0.498047C6.10466 0.498047 2.06836 4.96307 2.06836 10.4215C2.06836 14.28 4.55706 17.553 6.82617 19.7593C7.98687 20.8782 9.1371 21.7775 10.005 22.3944C10.4679 22.7331 10.9513 23.0575 11.448 23.346C11.7722 23.5342 12.2218 23.5551 12.546 23.3669C13.0436 23.078 13.5163 22.7313 13.989 22.4049C14.8569 21.7879 16.0072 20.8887 17.1679 19.7698C19.437 17.5634 21.9257 14.3009 21.9257 10.4319C21.9361 4.96307 17.8998 0.498047 12.0022 0.498047ZM12.0022 14.4787C9.76451 14.4787 7.94504 12.6592 7.94504 10.4215C7.94504 8.18374 9.76451 6.36427 12.0022 6.36427C14.24 6.36427 16.0595 8.18374 16.0595 10.4215C16.0595 12.6592 14.24 14.4787 12.0022 14.4787Z" fill="currentColor"></path></g></svg>
+                <p>중동 ▼</p>
             </button>
 
             <div class="search_bar">
@@ -72,9 +73,7 @@
                     <li> <a href="#"> 소일거리 </a></li>
                     <li> <a href="#"> 짐옮기기 </a></li>
                     <li> <a href="#"> 이사짐 </a></li>
-                    <li> <a href="#"> 배달 </a></li>
-                    <li> <a href="#"> 등하원 </a></li>
-                    <li> <a href="#"> 도우미 </a></li> 
+                    <li> <a href="#"> 배달 </a></li> 
 
             </ul>
         </div>
