--- a/project/2_daangn/jobs.html
+++ b/project/2_daangn/jobs.html
@@ -77,8 +77,8 @@
         </div>
     </div>
     <div id="title">
-            <h5 class="main_menu">홈 >&nbsp;<span>중고거래</span></h5>
-            <h2 class="main_title">경기도 부천시 중동 중고거래</h2>
+            <h5 class="main_menu">홈 >&nbsp;<span>알바</span></h5>
+            <h2 class="main_title">경기도 부천시 중동 알바</h2>
         </div>
         <div id="main"> <!-- 본문 -->
             <div id="sidebar"> <!-- 본문 사이드바 -->
